# ole-rs

./: Cargo.toml  README.md
src/: constants.rs  directory.rs  ftype.rs  header.rs  lib.rs
src/encryption/: excel.rs  word.rs
