[package]
name = "ole"
version = "0.1.3"
description = "Common files that are used by other crates."
authors = ["Filippo Finke <filippofinke@protonmail.ch>", "Marirs <marirs@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
derivative = "2.2"
epochs = "0.2"
lazy_static = "1.4"
packed_struct = "0.10"
thiserror = "1"

[lib]
name = "ole"
path = "src/lib.rs"
